[Framework] Only redacting IP/email addresses, not entire text